<resources>
    <string name="app_name">Queda</string>
    <string name="title_feed">최근</string>
    <string name="title_recommend">추천</string>
    <string name="title_map">탐색</string>
    <string name="title_my_page">마이</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="queda">꿰다</string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="name">이름</string>
    <string name="login">로그인</string>
    <string name="join">회원가입</string>
    <string name="agree">개인정보 수집 및 이용 약관에 동의합니다.</string>
    <string name="email">이메일</string>
    <string name="finish">완료</string>
    <string name="cancel">취소</string>
    <string name="writeGuide">게시물을 작성해봅시다</string>
    <string name="titleGuide">제목을 입력해주세요</string>
    <string name="contentGuide">내용을 입력해주세요</string>
    <string name="promoCheckGuide">프로모션(행사) 게시물입니다</string>
    <string name="attachCheckGuide">첨부할 사진이 있습니다</string>
    <string name="attachGuide">사진을 첨부해주세요</string>
    <string name="keywordGuide">관심사, 자주 방문하는 곳, 취미 등\n선호하는 것을 골라주세요. 다중 선택이 가능합니다.</string>
    <string name="keywordSelect">키워드 선택</string>
    <string name="title_home">홈</string>
    <string name="storeNameSample">투썸플레이스 계대동문점</string>
    <string name="storeAddrSample">대구광역시 달서구 신당동 1721–14</string>
    <string name="storeInfoTitleSample">안녕하세요 투썸입니다</string>
    <string name="storeInfoContentSample">저희는 신선한 원두와 어쩌고</string>
    <string name="storePhoneSample">053–585–2389</string>
    <string name="storeTimeSample">09:30 – 24:00</string>
    <string name="storeKeySample">#카페 #디저트 #스터디</string>
    <string name="storeInfo">정보</string>
    <string name="storePosts">게시물</string>
    <string name="storePromos">프로모션</string>
    <string name="profile_background_image">매장프로필 배경사진</string>
    <string name="profileBackgroundShadow">매장프로필 배경사진 어둡게</string>
    <string name="storeProfileImage">매장 프로필 사진</string>
    <string name="storeProfileBackImage">매장 프로필배경 사진</string>
    <string name="like">찜 버튼</string>
    <string name="post_detail">게시물 상세</string>
    <string name="post_title">제목</string>
    <string name="post_content">내용</string>
    <string name="delete">삭제</string>
    <string name="modify">수정</string>
    <string name="hello_blank_fragment">롸</string>
    <string name="searchGuide">키워드로 검색해보세요.</string>
    <string name="scrap">스크랩</string>
    <string name="post_author">글쓴이</string>
    <string name="attached">첨부사진</string>
    <string name="post_added">글쓴날</string>
    <string name="visit_store">가게보기</string>
    <string name="promo_range">행사기간</string>
    <string name="keyword_select_guide">키워드 선택 화면입니다.</string>
    <string name="feed_guide">피드 화면 입니다.</string>
    <string name="register">매장 등록</string>
    <string name="updateAsManager">관리자 등록</string>
    <string name="error_page">오류안내 게시물 생성</string>
    <string name="write_post_btn">글쓰기 버튼</string>
    <string name="write">새글쓰기</string>
    <string name="edit">정보수정</string>
    <string name="change_notice">공지바꾸기</string>
    <string name="store_notice">공지</string>
    <string name="finish_edit">수정완료</string>
    <string name="set_as_notice">공지로 설정</string>
    <string name="title_activity_store">StoreActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="set_notice">공지하기</string>
    <string name="from_until">~</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="close">닫기</string>
    <string name="error_pages">기본 게시물</string>
    <string name="init_keyword">키워드 등록</string>
    <string name="something">something</string>

</resources>