<?xml version="1.0" encoding="utf-8"?>


        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StoreProfileFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="350dp">

                    <ImageView
                        android:id="@+id/backgroundImage"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:contentDescription="@string/storeProfileBackImage"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/profileback" />

                    <ImageView
                        android:id="@+id/backgroundShadow"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:contentDescription="@string/profileBackgroundShadow"
                        app:srcCompat="@android:drawable/screen_background_dark_transparent" />

                    <ImageView
                        android:id="@+id/profileImage"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="bottom|center_horizontal"
                        android:clipToOutline="true"
                        android:contentDescription="@string/storeProfileImage"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/img" />

                    <ImageButton
                        android:id="@+id/follow"
                        android:layout_width="60dp"
                        android:layout_height="50dp"
                        android:layout_gravity="end"
                        android:layout_margin="10dp"
                        android:background="@drawable/h1"
                        android:contentDescription="@string/like"
                        android:scaleType="fitCenter" />

                </FrameLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/storeName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="@font/east_sea_dokdo"
                    android:gravity="center"
                    android:text="@string/storeNameSample"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/storeKeywords"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:fontFamily="@font/east_sea_dokdo"
                    android:text="@string/storeKeySample"
                    android:textAlignment="center"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/storeAddr"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:fontFamily="@font/east_sea_dokdo"
                    android:text="@string/storeAddrSample"
                    android:textAlignment="center"
                    android:textColor="@color/purple_700"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/storePhone"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:fontFamily="@font/east_sea_dokdo"
                    android:text="@string/storePhoneSample"
                    android:textAlignment="center"
                    android:textColor="@color/purple_700"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/storeOpenTime"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:fontFamily="@font/east_sea_dokdo"
                    android:text="@string/storeTimeSample"
                    android:textAlignment="center"
                    android:textColor="@color/purple_700"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />



            </LinearLayout>
        </ScrollView>



