<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StoreActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <FrameLayout
                android:id="@+id/store_images"
                android:layout_width="match_parent"
                android:layout_height="320dp">

                <ImageView
                    android:id="@+id/background_image"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:contentDescription="@string/storeProfileBackImage"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:id="@+id/background_edit"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="@android:drawable/screen_background_dark_transparent"
                    android:contentDescription="@string/profileBackgroundShadow" />

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="bottom|center_horizontal"
                    android:background="@drawable/profile"
                    android:contentDescription="@string/storeProfileImage"
                    android:scaleType="center" />

                <ImageButton
                    android:id="@+id/follow_btn"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:layout_margin="10dp"
                    android:background="@drawable/h1"
                    android:contentDescription="@string/like"
                    android:scaleType="fitCenter" />

                <TableRow
                    android:id="@+id/store_profile_manager_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <Button
                        android:id="@+id/edit_info_btn"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:background="#00FFFFFF"
                        android:text="@string/edit"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/write_post_btn"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:background="#00FFFFFF"
                        android:text="@string/write"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </TableRow>


            </FrameLayout>

            <LinearLayout
                android:id="@+id/store_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/store_name"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="#00FFFFFF"
                    android:gravity="center"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:singleLine="true"
                    android:text="@string/storeNameSample"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/store_keywords"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="#00FFFFFF"
                    android:gravity="center"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/storeKeySample"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/store_address"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="#00FFFFFF"
                    android:gravity="center"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/storeAddrSample"
                    android:textColor="@color/purple_700"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/store_phone"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="#00FFFFFF"
                    android:gravity="center"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/storePhoneSample"
                    android:textColor="@color/purple_700"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/store_open_time"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="#00FFFFFF"
                    android:gravity="center"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/storeTimeSample"
                    android:textColor="@color/purple_700"
                    android:layout_marginBottom="10dp"
                    android:textSize="20sp" />
                
            </LinearLayout>

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/store_nav_bar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:menu="@menu/store_nav_menu">

            </com.google.android.material.bottomnavigation.BottomNavigationView>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/store_nav_container"
                android:name="androidx.navigation.fragment.NavHostFragment"
                android:layout_width="match_parent"
                android:layout_height="700dp"
                app:navGraph="@navigation/store_navigation" />

        </LinearLayout>
    </ScrollView>




