<?xml version="1.0" encoding="utf-8"?>


        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StoreProfile">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="350dp">

                    <ImageView
                        android:id="@+id/background_image"
                        android:layout_width="match_parent"
                        android:layout_height="320dp"
                        android:contentDescription="@string/storeProfileBackImage"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/profileback" />

                    <ImageButton
                        android:id="@+id/background_edit"
                        android:layout_width="match_parent"
                        android:layout_height="320dp"
                        android:background="@android:drawable/screen_background_dark_transparent"
                        android:contentDescription="@string/profileBackgroundShadow" />

                    <ImageButton
                        android:id="@+id/profile_image"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="bottom|center_horizontal"
                        android:background="@drawable/profile"
                        android:clipToOutline="true"
                        android:contentDescription="@string/storeProfileImage"
                        android:scaleType="center" />

                    <ImageButton
                        android:id="@+id/follow_btn"
                        android:layout_width="60dp"
                        android:layout_height="50dp"
                        android:layout_gravity="end"
                        android:layout_margin="10dp"
                        android:background="@drawable/h1"
                        android:contentDescription="@string/like"
                        android:scaleType="fitCenter" />

                    <TableRow
                        android:id="@+id/store_profile_manager_menu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp">

                        <Button
                            android:id="@+id/edit_info_btn"
                            android:layout_width="100dp"
                            android:layout_height="50dp"
                            android:background="#00FFFFFF"
                            android:fontFamily="@font/east_sea_dokdo"
                            android:text="@string/edit"
                            android:textColor="@color/white"
                            android:textSize="24sp" />

                        <Button
                            android:id="@+id/change_notice_btn"
                            android:layout_width="110dp"
                            android:layout_height="50dp"
                            android:background="#00FFFFFF"
                            android:fontFamily="@font/east_sea_dokdo"
                            android:text="@string/change_notice"
                            android:textColor="@color/white"
                            android:textSize="24sp" />

                        <Button
                            android:id="@+id/write_post_btn"
                            android:layout_width="90dp"
                            android:layout_height="50dp"
                            android:background="#00FFFFFF"
                            android:fontFamily="@font/east_sea_dokdo"
                            android:text="@string/write"
                            android:textColor="@color/white"
                            android:textSize="24sp" />

                    </TableRow>


                </FrameLayout>

                <Button
                    android:id="@+id/store_name"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="#00FFFFFF"
                    android:fontFamily="@font/east_sea_dokdo"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/storeNameSample"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/black"
                    android:textSize="42sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/store_keywords"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:background="#00FFFFFF"
                    android:fontFamily="@font/east_sea_dokdo"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/storeKeySample"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/purple_500"
                    android:textSize="26sp" />

                <Button
                    android:id="@+id/store_address"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:background="#00FFFFFF"
                    android:fontFamily="@font/east_sea_dokdo"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/storeAddrSample"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/purple_700"
                    android:textSize="26sp" />

                <Button
                    android:id="@+id/store_phone"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:background="#00FFFFFF"
                    android:fontFamily="@font/east_sea_dokdo"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/storePhoneSample"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/purple_700"
                    android:textSize="26sp" />

                <Button
                    android:id="@+id/store_open_time"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:background="#00FFFFFF"
                    android:fontFamily="@font/east_sea_dokdo"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/storeTimeSample"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/purple_700"
                    android:textSize="26sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <com.google.android.material.bottomnavigation.BottomNavigationView
                    android:id="@+id/store_nav_bar"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:menu="@menu/store_nav_menu">

                </com.google.android.material.bottomnavigation.BottomNavigationView>

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/store_nav_container"
                    android:name="androidx.navigation.fragment.NavHostFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:navGraph="@navigation/store_navigation" />


            </LinearLayout>
        </ScrollView>



